Fix js blog on mobile

--- a/css/src/base.scss
+++ b/css/src/base.scss
@@ -2,8 +2,8 @@
 *
 *	declantyson/2017/base
 *	Declan Tyson
-*	v0.1.5
-*	05/05/2017
+*	v0.3.0
+*	01/10/2018
 *
 */
 
@@ -166,6 +166,10 @@ header {
 	&.col-33 {
 		width: 32%;
 	}
+}
+
+pre {
+	overflow-x: scroll;
 }
 
 @import "nav";
